# Copyright 2025 Ekumen, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_multirun//:defs.bzl", "multirun")

[
    cc_binary(
        name = file.replace(".cpp", ""),
        srcs = [
            file,
        ],
        deps = [
            "//:beluga",
            "//test/beluga:utils",
            "@google_benchmark//:benchmark_main",
        ],
    )
    for file in [
        "benchmark_likelihood_field_model.cpp",
        "benchmark_raycasting.cpp",
        "benchmark_spatial_hash.cpp",
        "benchmark_take_while_kld.cpp",
        "benchmark_tuple_vector.cpp",
    ]
]

multirun(
    name = "benchmark",
    commands = [
        ":benchmark_likelihood_field_model",
        ":benchmark_raycasting",
        ":benchmark_spatial_hash",
        ":benchmark_take_while_kld",
        ":benchmark_tuple_vector",
    ],
)
