# Copyright 2025 Ekumen, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_test")

[
    cc_test(
        name = file.replace("/", "_").replace(".cpp", ""),
        size = "small",
        srcs = [
            file,
        ],
        deps = [
            "//beluga",
            "//beluga/test:utils",
            "@googletest//:gtest_main",
        ],
    )
    for file in [
        "raycasting/test_bresenham.cpp",
        "test_amcl_core.cpp",
        "test_cluster_based_estimation.cpp",
        "test_distance_map.cpp",
        "test_effective_sample_size.cpp",
        "test_estimation.cpp",
        "test_exponential_filter.cpp",
        "test_raycasting.cpp",
        "test_thrun_recovery_probability_estimator.cpp",
        "test_unscented_transform.cpp",
    ]
]
