# Copyright 2025 Ekumen, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_test")

[
    cc_test(
        name = file.replace(".cpp", ""),
        size = "small",
        srcs = [
            file,
        ],
        deps = [
            "//beluga",
            "//beluga/test:utils",
            "@googletest//:gtest_main",
        ],
    )
    for file in [
        "test_beam_model.cpp",
        "test_bearing_sensor_model.cpp",
        "test_landmark_sensor_model.cpp",
        "test_lfm_with_unknown_space.cpp",
        "test_likelihood_field_model.cpp",
        "test_likelihood_field_model_base.cpp",
        "test_likelihood_field_prob_model.cpp",
        # "test_ndt_model.cpp",  # requires HDF5 support
    ]
]
